--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             <div class="mid-container">
                 <div class="side-menu">
                     <div class="menu">
-                        <a href="pages/maches.html">Upcoming Match</a>
+                        <a href="maches.html">Upcoming Match</a>
                     </div>
                     <div class="menu">
-                        <a href="pages/all_group.html">All Group</a>
+                        <a href="groups.html">All Group</a>
                     </div>
                     <div class="menu">
-                        <a href="blogs.html">Blog</a>
+                        <a href="index.html">Blog</a>
                     </div>
                 </div>
                 <div class="blogs">
@@ -235,7 +235,7 @@
 
             <h1>GOAL</h1>
 
-            <hr>
+            <hr class="style-one">
 
             <div>
 
@@ -253,12 +253,12 @@
 
 
             <div class="social">
-                <a href="#" class="fa fa-facebook"></a>
-                <a href="#" class="fa fa-twitter"></a>
-                <a href="#" class="fa fa-google"></a>
-                <a href="#" class="fa fa-linkedin"></a>
-                <a href="#" class="fa fa-youtube"></a>
-                <a href="#" class="fa fa-instagram"></a>
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-google"></i>
+                <i class="fa-brands fa-github"></i>
+                <i class="fa-brands fa-linkedin-in"></i>
+                <i class="fa-brands fa-instagram"></i>
             </div>
         </div>
 
